fix artist alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -649,7 +649,7 @@ text-decoration: none;
    font-family: Helvetica, sans-serif;
    font-size: 14px;
    /* font-weight: 900; */
-   margin-top: 80px;
+   margin-top: 20px;
    margin-left: 20px;
    margin-bottom: 5px;
    /* font-style: oblique; */
